--- a/frontend/src/pages/Home.module.css
+++ b/frontend/src/pages/Home.module.css
@@ -26,7 +26,6 @@ body {
 }
 
 .feed{
-    padding-top: 100px;
     display: flex;
     align-items: center;
     justify-content: center;
